Added screenshot support

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ contents.xcworkspacedata
 MySight.xcworkspace/xcshareddata
 Pods
 MySight.xcodeproj/project.xcworkspace/xcshareddata
+report.xml
+screenshots
