Added frameit support

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@ MySight.xcworkspace/xcshareddata
 Pods
 MySight.xcodeproj/project.xcworkspace/xcshareddata
 report.xml
-screenshots
+screenshots.html
+fastlane/screenshots/*/*.png
