--- a/MySight.xcodeproj/xcshareddata/xcschemes/AppStoreScreenshots.xcscheme
+++ b/MySight.xcodeproj/xcshareddata/xcschemes/AppStoreScreenshots.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "80AD897F27932AF2007B514D"
-               BuildableName = "AppStoreSceenshots.app"
+               BuildableName = "AppStoreScreenshots.app"
                BlueprintName = "AppStoreScreenshots"
                ReferencedContainer = "container:MySight.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "80AD897F27932AF2007B514D"
-            BuildableName = "AppStoreSceenshots.app"
+            BuildableName = "AppStoreScreenshots.app"
             BlueprintName = "AppStoreScreenshots"
             ReferencedContainer = "container:MySight.xcodeproj">
          </BuildableReference>
@@ -71,7 +71,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "80AD897F27932AF2007B514D"
-            BuildableName = "AppStoreSceenshots.app"
+            BuildableName = "AppStoreScreenshots.app"
             BlueprintName = "AppStoreScreenshots"
             ReferencedContainer = "container:MySight.xcodeproj">
          </BuildableReference>
